# G7TrucoGame

./: CMakeLists.txt  README.md  main.cpp  playtrucocontroller.h  resources.qrc  rulescontroller.cpp
Controller/: clientsocket.cpp  clientsocket.h  playtrucocontroller.cpp  rulescontroller.h  savecontroller.cpp  savecontroller.h  serversocket.cpp  serversocket.h
Model/: cardmodel.cpp  cardmodel.h  deckmodel.cpp  deckmodel.h  gamemodel.h  gamerulesmodel.cpp  gamerulesmodel.h  playermodel.cpp  playermodel.h  tablemodel.h
View/: actionview.cpp  actionview.h  actionview.ui  cardview.cpp  cardview.h  gameview.cpp  gameview.h  gameview.ui  helpview.cpp  helpview.h  helpview.ui  mainview.cpp  mainview.h  mainview.ui  nicknameview.cpp  nicknameview.h  nicknameview.ui  saveview.cpp  saveview.h  saveview.ui  serverview.cpp  serverview.h  serverview.ui
